# FastDDS-SH

./: .gitmodules  CMakeLists.txt  Dockerfile  README.md  colcon.pkg
.github/actions/ubuntu-test/: action.yml
.github/workflows/: ci.yml
dds/: CMakeLists.txt  README.md  colcon.pkg
dds-test/: CMakeLists.txt  colcon.pkg
dds-test/resources/: tcp_config_dashing.xml  udp_roundtrip.yaml
dds-test/src/integration/: roundtrip.cpp
dds-test/src/unitary/: conversion.cpp
dds-test/src/unitary/resources/: soss_types.idl
dds/doc/: design.md
dds/doc/diagram-design/: class.puml
dds/dockerfiles/: ros2-dds
dds/sample/: complex_types_tst.yaml
dds/sample/tcp/: config.xml  dds_tunnel_ros2_fiware_client.yaml  dds_tunnel_ros2_fiware_server.yaml  hello_dds_ros2.yaml  hello_fiware_dds.yaml
dds/sample/udp/: dds_fiware.yaml  dds_ros2.yaml  dds_ros2_vector.yaml
dds/src/: Conversion.cpp  Conversion.hpp  DDSMiddlewareException.hpp  DynamicTypeAdapter.hpp  Participant.cpp  Participant.hpp  Publisher.cpp  Publisher.hpp  Subscriber.cpp  Subscriber.hpp  SystemHandle.cpp  SystemHandle.hpp
dds/src/dtparser/: DynamicTypeParser.cpp  DynamicTypeParser.hpp  DynamicTypeParserCommon.hpp  YAMLParser.cpp  YAMLParser.hpp
doc/: design.md  tutorial.md
doc/diagram-design/: class.puml  sequence.puml
examples/common/HelloWorldExample/: CMakeLists.txt  HelloWorld.cxx  HelloWorldPublisher.cpp
examples/common/ros1_std_msgs/: CMakeLists.txt
examples/common/ros2_std_msgs/: CMakeLists.txt
examples/fiware/: dds_fiware.yaml  fiware_dds.yaml
examples/ros1/: dds_ros1.yaml  ros1_dds.yaml
examples/tcp/: config.xml  dds_tunnel_ros2_fiware_client.yaml  dds_tunnel_ros2_fiware_server.yaml
examples/udp/: CMakeLists.txt  dds_fiware.yaml  dds_fiware_ros1.yaml  dds_ros2_string.yaml  dds_ros2_vector.yaml  fiware_dds_ros1.yaml  ros2_dds_string.yaml
examples/udp/HelloWorldExample/: CMakeLists.txt  HelloWorld.h  HelloWorldSubscriber.cpp
examples/udp/HelloWorldExample/hello_type/: CMakeLists.txt  hello_typeConfig.cmake.in  hello_typeConfigVersion.cmake.in  package.xml
examples/udp/HelloWorldExample/hello_type/msg/: String.msg
examples/udp/ros1_std_msgs/: CMakeLists.txt
examples/wan/: wan_client.yaml  wan_client_listener.yaml  wan_client_talker.yaml  wan_config.xml  wan_server.yaml  wan_server_listener.yaml  wan_server_talker.yaml
examples/wan_turtle_demo/: joy_client.yaml  key_client.yaml  launch_soss.sh  testing_turtlesim.yaml  wan_client_listener.yaml  wan_client_talker.yaml  wan_config.xml  wan_server_listener.yaml  wan_server_talker.yaml
examples/wan_turtle_demo/turtle-types/: CMakeLists.txt  package.xml
sample/: hello_dds_fiware.yaml  hello_dds_ros2.yaml
sample/tcp/: tcp_dds_ros2.yaml  tcp_fw_dds.yaml
sample/udp/: udp_dds_ros2.yaml  udp_fw_dds.yaml
src/: .Participant.cpp.swp  Client.cpp  Client.hpp  Conversion.cpp  Conversion.hpp  DDSMiddlewareException.hpp  Participant.cpp  Participant.hpp  Publisher.cpp  Publisher.hpp  Server.cpp  Server.hpp  Subscriber.cpp  Subscriber.hpp  SystemHandle.cpp  SystemHandle.hpp  TopicType.cpp  TopicType.hpp  utils.cpp  utils.hpp
src/dtparser/: DynamicTypeParser.cpp  DynamicTypeParser.hpp  DynamicTypeParserCommon.cpp  DynamicTypeParserCommon.hpp  YAMLParser.cpp  YAMLParser.hpp
src/utils/databroker/: utils.cpp  utils.hpp
test/: CMakeLists.txt
test/integration/: roundtrip.cpp
test/integration/resources/: tcp_config_crystal.xml  tcp_config_dashing.xml
test/integration/resources/test_service/: test_service.cxx  test_service.h  test_servicePubSubTypes.cxx  test_servicePubSubTypes.h
test/unitary/: conversion.cpp  qos.cpp
test/unitary/resources/: fastdds_sh_unit_test_types.idl
