<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_type</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="support@eprosima.com">eprosima</maintainer>
  <license>TODO: License declaration</license>

  <export>
    <build_type>cmake</build_type>
  </export>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
